# asknothingx2

./: .gitignore  Cargo.toml
asknothingx2/: Cargo.toml
asknothingx2-eventsub/: Cargo.toml
asknothingx2-eventsub/src/: lib.rs  types.rs
asknothingx2-eventsub/src/twitch/: condition.rs  error.rs  keepalive.rs  macros.rs  metadata.rs  mod.rs  notification.rs  product.rs  reconnect.rs  request.rs  response.rs  revocation.rs  subscription.rs  transport.rs  welcome.rs
asknothingx2-eventsub/src/twitch/events/: automod.rs  bits_transaction.rs  channel.rs  charity.rs  conduit_shard.rs  drop_entitlement.rs  goals.rs  hype_train.rs  mod.rs  stream.rs  types.rs  user.rs  whisper.rs
asknothingx2-eventsub/src/twitch/payload/: drop_entitlement_grant_payload.rs  mod.rs  session.rs  subscription.rs
asknothingx2-eventsub/src/twitch/reference/: mod.rs  product.rs  transport.rs
asknothingx2-eventsub/src/twitch/reference/condition/: channel_raid_condition.rs  conduit_shard_disabled_condition.rs  drop_entitlement_drang_condition.rs  drop_entitlement_grant_condition.rs  extension_bits_transaction_create_condition.rs  mod.rs
asknothingx2-eventsub/src/twitch/reference/event/: channel_follow.rs  channel_raid_event.rs  conduit_shard_disabled_event.rs  drop_entitlement_grant_event.rs  extension_bits_transaction_event.rs  mod.rs
asknothingx2-eventsub/src/twitch/subscription_types/: mod.rs  request.rs  types.rs
asknothingx2-eventsub/src/twitch/subscription_types/channel_subscriptions/: channel_follow.rs  channel_raid.rs  conduit_shard_disabled.rs  extension_bits_transaction.rs  mod.rs
asknothingx2-eventsub/src/twitch/subscription_types/channel_subscriptions/drop_entitlement_grant/: condition.rs  event.rs  mod.rs
asknothingx2-eventsub/src/twitch/subscription_types/user/: authorization_grant_event.rs  mod.rs
asknothingx2-eventsub/src/twitch/types/: condition.rs  mod.rs  new_types.rs  objects.rs  payloads.rs  secret.rs  status.rs  subscription.rs  subscription_type.rs  transport.rs
asknothingx2-eventsub/src/twitch/websocket/: metadata.rs  reconnect.rs
asknothingx2-eventsub/src/twitch/websocket_message/: keepalive.rs  metadata.rs  mod.rs  notification.rs  reconnect.rs  revocation.rs  welcome.rs
asknothingx2-eventsub/src/twitch/ws/: keepalive.rs  mod.rs  notification.rs  revocation.rs  welcome.rs
asknothingx2-eventsub/tests/: keepalive.rs  main.rs  notification.rs  reconnect.rs  revocation.rs  transport.rs  welcome.rs
asknothingx2-eventsub/tests/subscription/: channel_follow.rs  channel_raid.rs  conduit_shard_disabled.rs  drop_entitlement_grant.rs  extension_bits_transaction.rs  mod.rs
asknothingx2-eventsub/tests/util/: mod.rs  util.md
asknothingx2-eventsub/tests/websocket_message/: keepalive.rs  metadata.rs  mod.rs  notification.rs  reconnect.rs  revocation.rs  welcome.rs
asknothingx2-util/: Cargo.toml
asknothingx2-util/src/: api_request.rs  lib.rs  tqpe.rs  treit.rs
asknothingx2-util/src/api/: api_request.rs  api_response.rs  app_type.rs  auth_scheme.rs  config.rs  content_type.rs  error.rs  extra_config.rs  header_builder.rs  header_mut.rs  http_response.rs  mod.rs  setup.rs
asknothingx2-util/src/api/content_type/: error.rs  macros.rs  mod.rs
asknothingx2-util/src/api/mime_type/: error.rs  macros.rs  mod.rs
asknothingx2-util/src/api/preset/: extra_config.rs  mod.rs
asknothingx2-util/src/api/request/: body.rs  error.rs  mod.rs
asknothingx2-util/src/api/setup/: mod.rs  registry.rs
asknothingx2-util/src/oauth/: mod.rs  validate_url.rs
asknothingx2-util/src/serde/: mod.rs
asknothingx2-util/tests/: content_type.rs  e2e.rs  main.rs
asknothingx2-util/tests/api/: auth_scheme.rs  content_type.rs  header_builder.rs  header_mut.rs  mod.rs
asknothingx2-util/tests/api/components/content_type/: application.rs  audio.rs  chemical.rs  font.rs  helper.rs  image.rs  macros.rs  message.rs  mod.rs  model.rs  multipart.rs  params.rs  text.rs  video.rs
asknothingx2-util/tests/api/request/: comprehensive.rs  edge_cases.rs  mod.rs  property_tests.rs  stress_tests.rs
asknothingx2-util/tests/api/request/body/: mod.rs  stream.rs
asknothingx2-util/tests/fixtures/: unicode.txt
asknothingx2/src/: lib.rs
src/: lib.rs
