[package]
name = "twitch_irc_client"
version = "0.0.1"
edition = "2021"

[dependencies]
futures-util = "0.3.30"
thiserror = "1.0.57"
tokio = { version = "1.36.0", features = ["rt", "rt-multi-thread", "sync"] }
tokio-tungstenite = { version = "0.21.0", features = ["native-tls", "rustls"] }
url = "2.5.0"
