[package]
name = "twitch_asknothingx2"
version = "0.0.1"
authors = ["m3id"]
edition = "2021"
description = "Twitch irc client"
license = "MIT OR Apache-2.0"
keywords = ["twitch"]

[dependencies]
futures-util = "0.3.30"
thiserror = "1.0.57"
tokio = { version = "1.36.0", features = ["rt", "rt-multi-thread", "sync"] }
tokio-tungstenite = { version = "0.21.0", features = ["native-tls", "rustls"] }
url = "2.5.0"
