[package]
name = "asknothingx2-eventsub"
version = "0.0.6"
authors = ["m3id"]
edition = "2021"
description = "Twitch eventsub"
repository = "https://github.com/m3idnotfree/asknothingx2"
license = "MIT"
keywords = ["twitch"]

[features]
default = ["twitch"]
twitch = []

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.132"

[dev-dependencies]
pretty_assertions = "1.4.1"
