[package]
name = "asknothingx2-eventsub"
version = "0.0.7"
authors = ["m3id"]
edition = "2021"
description = "Twitch eventsub"
repository = "https://github.com/m3idnotfree/asknothingx2"
license = "MIT"
keywords = ["twitch"]

[features]
default = ["twitch"]
twitch = []

[dependencies]
chrono = { version = "0.4.39", features = ["serde"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"

[dev-dependencies]
pretty_assertions = "1.4.1"
