[package]
name = "asknothingx2-util"
version = "0.1.0"
authors = ["m3id"]
edition = "2021"
description = "asknothing"
documentation = "https://docs.rs/asknothingx2-util"
repository = "https://github.com/m3idnotfree/asknothingx2"
license = "MIT"
keywords = ["asknothing", "oauth2", "http", "web", "client"]
categories = ["web-programming", "authentication", "api-bindings", "network-programming"]

[features]
oauth = ["oauth2", "url"]
api = ["bytes", "http", "reqwest", "url", "serde_json", "serde_urlencoded", "tracing", "base64"]
serde = []
full = ["oauth", "api"]
stream = ["dep:tokio", "tokio-util", "futures-util"]


[dependencies]
bytes = { version = "1.10.1", optional = true }
http = { version = "1.3.1", optional = true }
oauth2 = { version = "5.0.0", optional = true }
reqwest = { version = "0.12.20", optional = true, features = ["json", "rustls-tls", "gzip", "cookies", "brotli", "deflate", "hickory-dns", "multipart", "stream"] }
serde_json = { version = "1.0.140", optional = true }
serde_urlencoded = { version = "0.7.1", optional = true }
url = { version = "2.5.4", optional = true }
tracing = { version = "0.1.41", optional = true }
base64 = { version = "0.22.1", optional = true }

tokio = { version = "1.45.1", features = ["fs", "process"], optional = true }
tokio-util = { version = "0.7.15", features = ["io"], optional = true }
futures-util = { version = "0.3.31", optional = true }

serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
percent-encoding = "2.3.1"

[dev-dependencies]
proptest = "1.7.0"
rand = "0.9.1"
tokio = { version = "1.45.1", features = ["full"] }
tempfile = "3.20.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
