[package]
name = "asknothingx2-util"
version = "0.1.7"
authors = ["m3id"]
edition = "2021"
description = "asknothing"
documentation = "https://docs.rs/asknothingx2-util"
repository = "https://github.com/m3idnotfree/asknothingx2"
license = "MIT OR Apache-2.0"
keywords = ["asknothing", "oauth2", "http", "web", "client"]
categories = ["web-programming", "authentication", "api-bindings", "network-programming"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
oauth = ["oauth2", "url"]
api = ["bytes", "http", "dep:reqwest", "url", "serde_json", "serde_urlencoded", "tracing", "base64", "dep:tokio"]
serde = []
full = ["oauth", "api"]
stream = ["tokio-util", "futures-util"]
reqwest = ["dep:reqwest"]


[dependencies]
bytes = { version = "1.10.1", optional = true }
http = { version = "1.3.1", optional = true }
oauth2 = { version = "5.0.0", optional = true }
reqwest = { version = "0.12.22", default-features = false, optional = true, features = ["brotli", "charset", "cookies", "gzip", "hickory-dns", "http2", "json", "multipart", "rustls-tls", "stream"] }
serde_json = { version = "1.0.140", optional = true }
serde_urlencoded = { version = "0.7.1", optional = true }
url = { version = "2.5.4", optional = true }
tracing = { version = "0.1.41", optional = true }
base64 = { version = "0.22.1", optional = true }

tokio = { version = "1.45.1", features = ["fs", "process", "sync"], optional = true }
tokio-util = { version = "0.7.15", features = ["io"], optional = true }
futures-util = { version = "0.3.31", optional = true }

serde = { version = "1.0.219", features = ["derive"] }
percent-encoding = "2.3.1"

[dev-dependencies]
proptest = "1.7.0"
tokio-test = "0.4.4"
wiremock = "0.6.4"
tempfile = "3.20.0"
futures = "0.3.31"
