[package]
name = "asknothingx2"
version = "0.0.1"
edition = "2021"
description = "Twitch "
repository = "https://github.com/m3idnotfree/asknothingx2"
license = "MIT OR Apache-2.0"
keywords = ["asknothing", "twitch"]

[dependencies]
futures-util = "0.3.31"
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = ["rt", "rt-multi-thread", "sync"] }
tokio-tungstenite = { version = "0.24.0", features = ["native-tls", "rustls"] }
url = "2.5.2"
